--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
 			<version>1.4.1.Final</version>
 		</dependency>
 
+		<!-- Ip地址获取 -->
+		<dependency>
+			<groupId>net.dreamlu</groupId>
+			<artifactId>mica-ip2region</artifactId>
+			<version>2.5.4</version>
+		</dependency>
 
 	</dependencies>
 
