--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,19 @@
 			<version>2.5.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.gitlab</groupId>
+			<artifactId>java-gitlab-api</artifactId>
+			<version>4.1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.gitlab4j</groupId>
+			<artifactId>gitlab4j-api</artifactId>
+			<version>4.19.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
